--- a/cards/cards.css
+++ b/cards/cards.css
@@ -6,64 +6,66 @@ card {
 	display: inline-block;
 	background-repeat: no-repeat!important;
 	background-size: 100% 100%!important;
-	width: calc(15rem * 23/32);
-	height: calc(15rem );
-	border: 0.1rem solid rgba(0,0,0,.12);
-	border-radius: 1rem;
-	box-shadow: 0 0.25rem 0.75rem rgba(0,0,0,0.24);
+	width: calc(200px * 23/32);
+	height: 200px;
+	border: 1px solid rgba(0,0,0,.12);
+	border-radius: 20px;
+	box-shadow: 0 4px 15px rgba(0,0,0,0.24);
 	position: absolute;
 
-	transition: all 0.3s;
+	transition: transform 0.3s;
 	transform-style: preserve-3d;
 }
 
-card:hover {
-	Xmargin-top: -1rem;
-	-webkit-transform: translateZ(2px);
 
-	Xbox-shadow: 0 calc(1rem + 0.25rem) 1.75rem rgba(0,0,0,0.24);
+card .front, card .back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+
+}
+
+card .front {
+	transform: rotateY(0deg);
+}
+
+card .back {
+	transform: rotateY(180deg);
+}
+
+
+
+
+
+
+card:hover, card.active {
+	margin-top: -1px;
+	margin-left: -1px;
+}
+
+card:hover {
+	box-shadow: 0 4px 20px rgba(0,0,0,0.24);
 	-webkit-filter: saturate(150%);
-	margin-left: -0.1rem;
-	border: 0.2rem solid rgba(0,0,0,.24);	
+	border: 2px solid rgba(0,0,0,.24);
 }
 
 card.active {
-	margin-top: -2rem;
+	box-shadow: 0 4px 40px rgba(0,0,0,0.24);
+	-webkit-transform: translateZ(10px);
+	margin-top: -1px;
+	margin-left: -1px;
 	outline: 0;
-	z-index: 999!important;
-	box-shadow: 0 calc(2rem + 0.25rem) 2.75rem rgba(0,0,0,0.24);
+	Xz-index: 999!important;
+	border: 2px solid rgba(255,0,0,.24);	
 }
 
 card.active.interacting {
-	transition: none!important;
+	Xtransition: none!important;
 }
+
 
 card.active:hover {
-	margin-top: -2.1rem;
-}
-
-card.rotate:hover, card.flip:hover { 
-	z-index: 99!important;
-}
-
-card.rotate:hover {
-	transform: rotateZ(3deg)
-}
-card.rotate.r90.active {
-	transform: rotateZ(90deg)
-}
-card.rotate.r180.active {
-	transform: rotateZ(180deg)
-}
-card.rotate.r270.active {
-	transform: rotateZ(270deg)
-}
-
-card.flip:hover {
-	transform: rotateY(45deg)
-}
-card.flip.active {
-	transform: rotateY(180deg)
 }
 
 
